--- a/body/1Introduction.tex
+++ b/body/1Introduction.tex
@@ -1,12 +1,11 @@
-\section{Introduction}
+\section{Intorduction}
 
-Artificial intelligence (AI) is fundamentally reshaping the global economic landscape and the strategic foundations of national competitiveness. From autonomous driving and intelligent manufacturing to medical diagnostics and scientific research, the penetration of AI applications continues to accelerate, establishing AI capability as a core dimension of national innovation capacity and long-term development potential. In this context, major economies have elevated AI development to the level of national strategy, competing for technological dominance through large-scale R\&D investment, policy support, and infrastructure development. However, the scientific assessment and comparison of AI development capabilities across nations, and the provision of quantitative evidence for policy formulation and resource allocation, remains a pressing theoretical and practical challenge.
+\subsection{Background}
 
-National AI development capability represents a typical multi-dimensional complex system involving the synergistic interaction of talent reserves, R\&D investment, computational infrastructure, policy environment, industrial applications, and innovation outputs. Existing research predominantly focuses on single dimensions or partial indicators, lacking a unified evaluation framework and cross-country comparability. Moreover, decision-making needs related to dynamic evolution and resource optimization have not yet received systematic modeling support. Particularly under real-world constraints of heterogeneous data sources, inconsistent indicator definitions, and incomplete time series, constructing a closed-loop modeling framework capable of both revealing structural patterns and supporting forecasting and optimization presents significant methodological challenges and practical value.
+In the contemporary era, artificial intelligence (AI) has emerged as one of the core domains of global technological competition, exerting profound and systemic influences on economic development, social progress, and national security. With the acceleration of a new wave of technological revolution and industrial transformation, AI technologies are fundamentally reshaping traditional industrial structures, modes of production, and governance systems, and have gradually become a key indicator of a nation’s scientific strength and overall competitiveness.
 
-This paper aims to construct a unified and reproducible mathematical modeling framework to systematically address four progressive problems: First, identifying key factors of AI development capability and their interdependent structure to establish a quantifiable indicator system (\textbf{Problem 1}); second, developing an objective comprehensive evaluation model to rank the 2025 AI competitiveness of representative countries (\textbf{Problem 2}); third, forecasting the dynamic evolution of national competitiveness from 2026 to 2035 based on historical data (\textbf{Problem 3}); and finally, designing an optimal AI investment allocation strategy for China under budget constraints to maximize comprehensive competitiveness by 2035 (\textbf{Problem 4}). These problems constitute a complete decision chain of ``factor identification--comprehensive evaluation--trend forecasting--investment optimization,'' providing quantitative tool support for national-level AI strategic planning.
+Against this backdrop, countries around the world have elevated artificial intelligence to a strategic priority at the national level, continuously increasing investments in algorithmic research, computing infrastructure, data resource development, and the expansion of application scenarios, with the aim of securing a leading position in the global AI competitive landscape.
 
-<<<<<<< HEAD
 \subsection{Problem Restatement}
 
 This study aims to quantitatively evaluate national artificial intelligence (AI) development capabilities, compare global competitiveness, and analyze future development trends through a systematic mathematical modeling framework. The problem is decomposed into four sequential and interrelated tasks:
@@ -35,10 +34,7 @@ To systematically address these challenges, this study establishes a closed-loop
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.75\textwidth]{figure/our_work_flowchart.pdf}
+  \includegraphics[width=0.95\textwidth]{figure/our_work_flowchart.pdf}
   \caption{Overall modeling framework for assessing, forecasting, and optimizing national AI competitiveness.}
   \label{fig:overall_framework}
 \end{figure}
-=======
-Methodologically, this paper integrates multiple mathematical models into a unified analytical framework. Problem 1 employs Pearson correlation analysis and Principal Component Analysis (PCA) to reveal the intrinsic structure and key drivers among 24 indicators. Problem 2 combines the Entropy Weight Method (EWM) for objective weighting with the TOPSIS approach for comprehensive scoring, validated through Grey Relational Analysis (GRA) to enhance robustness. Problem 3 applies the GM(1,1) grey forecasting model to extrapolate all 24 indicators individually, with forecast accuracy validated through backtest diagnostics. Problem 4 formulates a diminishing-return response function and employs Sequential Least Squares Programming (SLSQP) to solve the nonlinear constrained optimization problem. Core innovations include: (1) establishing a fully reproducible framework from data to decision-making that ensures consistency across problems; (2) enhancing result credibility through multi-model cross-validation and sensitivity analysis; (3) organically integrating evaluation, forecasting, and optimization into a closed-loop decision-support system.
->>>>>>> b8aaf558bd1dc8c9faafc44bbeb9cf037d1bcc3e
