--- a/MI2601258.tex
+++ b/MI2601258.tex
@@ -53,8 +53,8 @@
 \fancypagestyle{plain}{
 	\fancyhf{}
 	\lhead{Team \# \Team}
-	%\rhead{Page \thepage~of \pageref{LastPage}}
-	\rhead{Page \thepage~of 25}
+	\rhead{Page \thepage~of \pageref{LastPage}}
+	%\rhead{Page \thepage~of 25}
 	\cfoot{}
 }
 
@@ -82,18 +82,17 @@
 	\normalsize\textbf{Summary}
 \end{center}
 
-%摘要
-Artificial intelligence has become a core driver of national competitiveness. This paper develops a unified framework to evaluate, forecast, and optimize national AI capabilities based on 24 indicators from 10 countries (2016--2025).
+Artificial intelligence has become a core driver of national competitiveness. This paper develops a unified framework to evaluate, forecast, and optimize national AI capabilities based on \textbf{24 indicators} from \textbf{10 countries} (2016--2025).
 
-\textbf{In Problem 1}, Pearson correlation analysis identifies 86 strongly correlated indicator pairs ($|r|>0.7$). Principal Component Analysis extracts four components explaining 85\% cumulative variance, revealing infrastructure, talent, and innovation as key drivers.
+\textbf{In Problem 1}, Pearson correlation analysis identifies \textbf{86 strongly correlated} indicator pairs ($|r|>0.7$). Principal Component Analysis extracts \textbf{four components} explaining \textbf{85\%} cumulative variance, revealing \textbf{infrastructure}, \textbf{talent}, and \textbf{innovation} as key drivers.
 
-\textbf{For Problem 2}, we employ Entropy Weight Method and TOPSIS to rank 2025 AI competitiveness: United States first (0.641), China second (0.510), India third (0.210). Grey Relational Analysis validates the ranking with Spearman correlation $\rho=0.95$.
+\textbf{For Problem 2}, we employ the \textbf{Entropy Weight Method} and \textbf{TOPSIS} to rank 2025 AI competitiveness: \textbf{United States} first (0.641), \textbf{China} second (0.510), \textbf{India} third (0.210). \textbf{Grey Relational Analysis} validates the ranking with Spearman correlation $\rho=0.95$.
 
-\textbf{Problem 3} applies GM(1,1) grey forecasting to project 2026--2035 trends for all 24 indicators. Backtest diagnostics show median MAPE $10.35\%$. Results indicate top-three countries maintain structural advantages over the decade.
+\textbf{Problem 3} applies \textbf{GM(1,1)} grey forecasting to project 2026--2035 trends for all 24 indicators. Backtest diagnostics show median \textbf{MAPE} $10.35\%$. Results indicate top-three countries maintain structural advantages over the decade.
 
-\textbf{In Problem 4}, Sequential Least Squares Programming optimizes China's CNY 1 trillion investment allocation: infrastructure 32.33\%, talent cultivation 17.39\%, policy support 17.39\%. Sensitivity analysis confirms robustness under weight perturbation.
+\textbf{In Problem 4}, \textbf{Sequential Least Squares Programming (SLSQP)} optimizes China's \textbf{CNY 1 trillion} investment allocation: \textbf{infrastructure} 32.33\%, \textbf{talent cultivation} 17.39\%, \textbf{policy support} 17.39\%. Sensitivity analysis confirms robustness under weight perturbation.
 
-The framework integrates evaluation, forecasting, and optimization with multi-layer validation, providing reproducible decision support for national AI strategic planning.
+The framework integrates evaluation, forecasting, and optimization with multi-layer validation, providing \textbf{reproducible decision support} for national AI strategic planning.
 
 \vspace{0.4cm}
 \noindent \textbf{Keywords:} AI Development Capability, TOPSIS, Grey Forecasting, Entropy Weighting, Investment Optimization, Competitiveness Ranking
@@ -128,7 +127,7 @@ The framework integrates evaluation, forecasting, and optimization with multi-la
 \pagestyle{fancy}
 \thispagestyle{fancy}
 
-\input{body/AIused.tex}
+%\input{body/AIused.tex}
 
 %\end{CJK}
 \end{document}
