--- a/body/1Introduction.tex
+++ b/body/1Introduction.tex
@@ -8,7 +8,7 @@ Against this backdrop, countries around the world have elevated artificial intel
 
 \subsection{Problem Restatement}
 
-This study aims to quantitatively evaluate national artificial intelligence (AI) development capabilities, compare global competitiveness, and analyze future development trends through a systematic mathematical modeling framework. The problem is decomposed into four sequential and interrelated tasks:
+This study aims to quantitatively evaluate national artificial intelligence (AI) development capabilities, compare global competitiveness, and analyze future development trends through a systematic mathematical modeling framework. The problem is decomposed into four sequential and interrelated tasks\cite{HuashuCup2026}:
 
 \textbf{Task 1: Factor Identification and Correlation Analysis}
 
